# fuzzing_examples

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md
.github/: ISSUE_TEMPLATE.md
.github/workflows/: fuzzer.yml
asn1/: Cargo.toml  README.md
asn1/hfuzz_target/: .rustc_info.json  honggfuzz
asn1/hfuzz_workspace/asn1/: HONGGFUZZ.REPORT.TXT
asn1/hfuzz_workspace2/asn1/: HONGGFUZZ.REPORT.TXT  (+1 more)
asn1/src/: main.rs
bencode-parser-fuzz/: Cargo.toml  README.md
bencode-parser-fuzz/benches/: bencode_bench.rs
bencode-parser-fuzz/bencode-parser-fuzz/: Cargo.toml
bencode-parser-fuzz/bencode-parser-fuzz/hfuzz_workspace/input_bencode/hfuzz_workspace/bencode-parser-fuzz/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.fffff7e09eac.STACK.1b38d008f3.CODE.-6.ADDR.0.INSTR.adrp_x0,_0x000000000013c000.fuzz
bencode-parser-fuzz/bencode-parser-fuzz/hfuzz_workspace/input_no_bencode2/bencode-parser-fuzz/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.fffff7e09eac.STACK.19c2293d86.CODE.-6.ADDR.0.INSTR.adrp_x0,_0x000000000013c000.fuzz
bencode-parser-fuzz/bencode-parser-fuzz/hfuzz_workspace/input_non_bencode/bencode-parser-fuzz/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.fffff7e09eac.STACK.1b380215cf.CODE.-6.ADDR.0.INSTR.adrp_x0,_0x000000000013c000.fuzz  SIGSEGV.PC.aaaaaaabeb90.STACK.18f6234da3.CODE.1.ADDR.ffffff7ffff0.INSTR.stp_q0,_q1,_[sp].fuzz
bencode-parser-fuzz/bencode-parser-fuzz/src/: main.rs
c_fuzzing/: Cargo.toml  README.md  build.rs
c_fuzzing/src/: c_json.rs  main.rs
cairo_fuzz/: README.md
cairo_fuzz/diff-fuzz/: Cargo.toml  Makefile
cairo_fuzz/diff-fuzz/cairo_programs/: _keccak.json  abs_value_array.json  array_sum.json  assert_250_bit_element_array.json  assert_le_felt_hint.json  assert_lt_felt.json  assert_nn.json  assert_not_zero.json  big_struct.json  bitwise_builtin_test.json  bitwise_output.json  bitwise_recursion.json  blake2s_felts.json  blake2s_hello_world_hash.json  blake2s_integration_tests.json  call_function_assign_param_by_name.json  common_signature.json  compare_arrays.json  compare_different_arrays.json  compare_greater_array.json  compare_lesser_array.json  dict.json  dict_integration_tests.json  dict_squash.json  dict_store_cast_ptr.json  dict_update.json  example_program.json  factorial.json  fibonacci.json  finalize_blake2s.json  find_element.json  function_return.json  function_return_if_print.json  function_return_to_variable.json  if_and_prime.json  if_in_function.json  if_list.json  integration.json  integration_with_alloc_locals.json  is_quad_residue_test.json  (+50 more)
cairo_fuzz/diff-fuzz/src/: main.rs
cairo_fuzz/fuzz/: Cargo.toml  json.dict
cairo_fuzz/fuzz/src/: main.rs  playground.rs
deflate_fuzz/: .gitignore  Cargo.toml  README.md
deflate_fuzz/fuzz/: Cargo.toml
deflate_fuzz/fuzz/fuzz_targets/: fuzz_target_1.rs
deflate_fuzz/fuzz_targets/: fuzz_target_1.rs
fuzz/: README.md
fuzz/fuzz/: Cargo.toml
image-tiff/: Cargo.toml  README.md
image-tiff/hfuzz_target/: .rustc_info.json
image-tiff/src/: main.rs
lambdaworks_fuzz/: Cargo.toml  README.md
lambdaworks_fuzz/fuzz/: Cargo.toml
lambdaworks_fuzz/fuzz/artifacts/fuzz_target_1/: crash-e0939b1011098054c350958a42f3df1bb93f5f58
lambdaworks_fuzz/fuzz/artifacts/fuzz_target_3/: crash-692d7d2bc97d1f63b18c21c13e4a636f5b3ebb66
lambdaworks_fuzz/fuzz/fuzz_targets/: fft_fuzz.rs  fuzz_target_1.rs  fuzz_target_2.rs  fuzz_target_3.rs
lambdaworks_fuzz/src/: main.rs
merkle_patricia_tree/: README.md
merkle_patricia_tree/merkle_tree/: Cargo.toml
merkle_patricia_tree/merkle_tree/hfuzz_workspace/merkle_tree/: HONGGFUZZ.REPORT.TXT
merkle_patricia_tree/merkle_tree/src/: main.rs
starknet_fuzzer/: Cargo.toml
starknet_fuzzer/hfuzz_workspace/starknet_fuzzer/: HONGGFUZZ.REPORT.TXT  SIGABRT.PC.fffff7d5eeac.STACK.1bb8c7d06a.CODE.-6.ADDR.0.INSTR.adrp_x0,_0x000000000013c000.fuzz
starknet_fuzzer/src/: main.rs
test_fuzzer/src/: main.rs
torrents/: 25 Photo Frames In PNG Format High Quality With 300 Dpi [ADilAns] [h33t].torrent  file1.torrent  file2.torrent  file3.torrent
wasmbin_fuzz/: Cargo.toml  README.md
wasmbin_fuzz/fuzz/: Cargo.toml
wasmbin_fuzz/fuzz_targets/: encode.rs
xmlparser/: Cargo.toml  README.md  xml.dict
xmlparser/hfuzz_target/: .rustc_info.json  honggfuzz
xmlparser/src/: main.rs
(+1049 files in other folders)
