[package]
name = "starknet_fuzzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet-rs =  { path = "../starknet_in_rust" }
felt = { git = "https://github.com/lambdaclass/cairo-rs", package = "cairo-felt", rev = "8dba86dbec935fa04a255e2edf3d5d184950fa22" }
honggfuzz = "0.5.51"
num-traits = "0.2.15"
starknet_api = { git = "https://github.com/lambdaclass/starknet-api", branch = "main", features = ["testing"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
