[package]
name = "bencode-parser-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bencoder =  { git = "https://github.com/lambdaclass/libtorrent-rs", branch = "main" }
nom_bencode =  { git = "https://github.com/edg-l/nom-bencode", branch = "master" }
honggfuzz = "0.5.51"
