[package]
name = "diff-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { tag = "v2.0.0-rc.2", git = "https://github.com/bincode-org/bincode.git" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-rs", rev = "29e5580ded73f40feddec4e756b5646b875f4699" }
honggfuzz = "0.5.55"
rand = "0.8.5"
