[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honggfuzz = "0.5.51"
cairo-vm = { git = "https://github.com/lambdaclass/cairo-rs.git", rev = "c15c642adef6ee0d680e50a680e9b88a3f7f30dd" }

