[package]
name = "fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honggfuzz = "0.5.51"
cairo-vm = { git = "https://github.com/lambdaclass/cairo-rs.git", rev = "73539d37d3ce203cc08ad97d57790bd2221cc117" }

