[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
honggfuzz = "0.5.51"
digest = "0.10.6"
generic-array = "0.14.6"
slab = "0.4.7"
smallvec = { version = "1.10.0", features = ["const_generics", "union"] }
cita_trie = "4.0.0"
hasher = "0.1.4"
sha3 = "0.10.6"
proptest = "1.0.0"
patricia-merkle-tree = { git = "https://github.com/lambdaclass/merkle_patricia_tree", branch = "main" }
rand = "0.8.5"


[dev-dependencies]
cita_trie = "4.0.0"
criterion = "0.4.0"
hasher = "0.1.4"
hex-literal = "0.3.4"
proptest = "1.0.0"
rand = "0.8.5"
sha3 = "0.10.6"